--- a/config/mycommand.sty
+++ b/config/mycommand.sty
@@ -84,10 +84,12 @@
 \newcommand{\maximal}{\operatorname{max}}
 \newcommand{\maximum}{\operatorname{max^{\ast}}}
 \newcommand{\re}{\operatorname{re}}
+\newcommand{\rmc}{\operatorname{c}}
+\newcommand{\MS}{\operatorname{MS}}
 \newcommand{\ar}{\operatorname{ar}}
 \newcommand{\ot}{\operatorname{ot}}
 \newcommand{\fker}{\operatorname{fker}}
-\newcommand{\ceq}{\operatorname{ceq}}
+\newcommand{\ec}{\operatorname{ec}}
 \newcommand{\idm}{\operatorname{idm}}
 \newcommand{\idx}{\operatorname{idx}}
 \newcommand{\prd}{\operatorname{prd}}
